Main Fixes
Fixed Blurry Text
Edited Dropdown Button Design

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
 
 .placeholder, main {
 	position: sticky;
-	top: -90vh;
+	top: -89vh;
 	overflow: hidden;
 	height: 100vh;
 	width: 100vw;
@@ -73,18 +73,18 @@ body {
 /* Navigation Menu ------------------------------------------------------------------- */
 nav {
 	position: sticky;
-	top: 10vh;
+	top: 11vh;
 	display: grid;
 	background-color: white;
 	font-size: 1em;
 	z-index: 2;
-	height: 3vh;
+	height: 4vh;
 	width: 100vw;
 }
 
 .navsection {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(0px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
 	background-color: #333333;
 }
 
@@ -97,15 +97,21 @@ nav {
 }
 
 .navbutton {
-	text-align: center;
-	padding: .5em;
 	color: orange;
-	background-color: #333333;
-	/* background-color: inherit; */
+/*	text-align: center;*/
+	background-color: black; 
+/* background-color: inherit; */
 	text-decoration: none;
-	display: inline-block;
+	display: flex;
 	position: relative;
 	/* border-radius: 1000px; */
+}
+
+.navtext {
+	display: flex;
+	position: relative;
+	margin: auto;
+	
 }
 
 /* #navcontact {
@@ -133,6 +139,46 @@ nav {
 	/* background-color: inherit; */
 	text-decoration: none;
 }
+
+/* Dropdown Menu ---------------------------------------------------------------------*/
+  .dropbtn {
+/*   background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none; */
+  
+  	text-align: center;
+	padding: .5em;
+	color: orange;
+	background-color: inherit;
+	/* background-color: inherit; */
+	text-decoration: none;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+	white-space: nowrap;
+  left: 0%;
+  top: 100%;
+  background-color: #f1f1f1;
+  min-width: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.navbutton:hover .dropdown-content {display: block;}
+
 /* ----------------------------------------------------------------------------------------------- */
 /* Main Body ------------------------------------------------------------------------------------- */
 main {
@@ -144,9 +190,9 @@ main {
 	grid-row-gap: 1em;
 	align-items: center;
 	width: 100vw;
-	height: 87vh;
+	height: 85vh;
 	z-index: 1;
-	top: 13vh;
+	top: 15vh;
 }
 
 .bio {
@@ -292,8 +338,8 @@ hr {
 	align-self: right;
 	width: 100vw;
 	text-align: center;
-	color: gray;
-	background-color: #333333;
+	color: #4B4B4B;
+	background-color: black;
 	/* padding: 0 100px 0 100px; */
 }
 
@@ -303,45 +349,5 @@ hr {
   top: 50%;
   transform: translate(-50%, -50%); */
  /* --------------------------------------------------------------------------------- */
-  
-  
-  
-/* Dropdown Menu ---------------------------------------------------------------------*/
-  .dropbtn {
-/*   background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none; */
-  
-  	text-align: center;
-	padding: .5em;
-	color: orange;
-	background-color: inherit;
-	/* background-color: inherit; */
-	text-decoration: none;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  left: 0%;
-  top: 100%;
-  background-color: #f1f1f1;
-  width: 100%;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.navbutton:hover .dropdown-content {display: block;}
 
 /* -----------------------------------------------------------------------------------*/
